- complete rewrite of JavaFX Filter Dialog in Swing; removed 99% of all JavaFX code - fix some static analyzer warnings